--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Project arduino-ad-mux-lib (https://github.com/stechio/arduino-ad-mux-lib):
-* Stefano Chizzolini	https://github.com/stechio
+  * Stefano Chizzolini (https://github.com/stechio)
 
 Project MUX74HC4067 (original code base, https://github.com/nlamprian/MUX74HC4067):
-* Nick Lamprianidis		https://github.com/nlamprian
+  * Nick Lamprianidis (https://github.com/nlamprian)
